--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     
     <div class="main">
         <div class="content">
-            <h1 class="h1">Владимир Маркиев. Рассказ о себе, ссылки на соцсети, проекты и контакты</h1>
+            <h1 class="h1">Рассказ о себе, ссылки на соцсети, проекты и контакты</h1>
             <p>На этой странице я рассказываю о себе в свободной форме. Здесь вы можете узнать о моих <a href="#interests">интересах и хобби</a>, а также ознакомиться с моими <a href="#projects">проектами и профилями</a> в соцсетях. Если вы потерялись, перейдите на <a href="index.html">Главную страницу</a>.</p> 
         </div>
         <a name="interests"></a>
