Поправил даты начала работы в ДВ

--- a/experience.html
+++ b/experience.html
@@ -118,7 +118,7 @@
         <a tabindex="1" name="dec20"></a>
         <div class="content">
             <h2 class="h2">DocsVision</h2>
-            <div class="subheadline">Апрель 2020 - Декабрь 2020</div>
+            <div class="subheadline">Декабрь 2020 - Н.В.</div>
             <p>С декабря 2020 года я работаю техническим писателем в DocsVision. Мне очень нравится моя работа и дружная семья DocsVision. Я пишу документацию для нашей системы электронного документооборота в форматах DITA и Markdown.</p>
             <p>Если вам интересно узнать о компании и продукте, можете спросить меня. Мои контакты есть в футере и на странице <a href="about.html" target="blank" title="Открыть в текущей вкладке">Обо мне</a>. Или можете просто заглянуть на <a href="https://docsvision.com/" target="blank" title="Открыть в новой вкладке">сайт DocsVision</a>.</p>
         </div>
